fixed homenav overlap

--- a/public/styles.css
+++ b/public/styles.css
@@ -603,7 +603,7 @@ body {
   }
 
   .grid-item.right.first {
-    margin-top: 27rem !important;
+    margin-top: 20rem !important;
   }
 
   .grid-item a {
